objects/ssot__CareRequestItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AmbulanceTransportDistanceNumber__c</fullName>
        <label>AmbulanceTransportDistanceNumber</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AmbulanceTransportReason__c</fullName>
        <label>Ambulance Transport Reason</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AmbulanceTransportType__c</fullName>
        <label>Ambulance Transport Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApprovedLengthOfStayDayQuantity__c</fullName>
        <label>Approved Length Of Stay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ApprovedLevelOfCare__c</fullName>
        <label>Approved Level Of Care</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApprovedServiceEndDate__c</fullName>
        <label>Approved Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ApprovedServiceStartDate__c</fullName>
        <label>Approved Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationApprovalIdentifier__c</fullName>
        <label>Authorization Approval Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationReferenceIdentifier__c</fullName>
        <label>Authorization Reference Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequestCaseId__c</fullName>
        <label>Care Request Case Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequestId__c</fullName>
        <label>Care Request Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareRequestQuantityTypeId__c</fullName>
        <label>Care Request Quantity Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalDeterminationNotesText__c</fullName>
        <label>ClinicalDeterminationNotes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalDeterminationReasonId__c</fullName>
        <label>Clinical Determination Reason</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalDetermination__c</fullName>
        <label>Clinical Determination</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestId__c</fullName>
        <label>Clinical Service Request</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentDocumentId__c</fullName>
        <label>Content Document</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentLevelOfCare__c</fullName>
        <label>Current Level Of Care</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionDateTime__c</fullName>
        <label>DecisionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DeniedLevelOfCare__c</fullName>
        <label>Denied Level Of Care</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeniedServiceCodeDescription__c</fullName>
        <label>Denied Service Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeniedServiceQuantity__c</fullName>
        <label>Denied Service Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FreeFormProcedureDescription__c</fullName>
        <label>FreeFormProcedureDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Request Item Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LengthOfStayDays__c</fullName>
        <label>Length Of Stay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationApprovedQuantityNumber__c</fullName>
        <label>Approved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationRequestDeniedQuantityNumber__c</fullName>
        <label>Medication Request Denied Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationRequestModifiedQuantityNumber__c</fullName>
        <label>Medication Request Modified Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationRequestedQuantityNumber__c</fullName>
        <label>Medication Requested Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedCodeDescription__c</fullName>
        <label>Modified Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedCodeIdentifierText__c</fullName>
        <label>Modified Code Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedCodeTypeIdentifierText__c</fullName>
        <label>Modified Code Type Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedCodeType__c</fullName>
        <label>Modified Code Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedEffectiveDate__c</fullName>
        <label>Modified Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedEndDate__c</fullName>
        <label>Modified End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedLevelOfCare__c</fullName>
        <label>Modified Level Of Care</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedProcedureCodeId__c</fullName>
        <label>Modified Procedure Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedProcedureCodeSetId__c</fullName>
        <label>Modified Procedure Code Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedProcedureCodeSetObject__c</fullName>
        <label>Modified Procedure Code Set Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedProcedureCodeType__c</fullName>
        <label>Modified Procedure Code Type Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedServiceCodModifier3__c</fullName>
        <label>Modified Service Code Modifier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedServiceCodeModifier2Desc__c</fullName>
        <label>Modified Service Code Modifier 2 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedServiceCodeModifier2__c</fullName>
        <label>Modified Service Code Modifier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedServiceCodeModifier3Desc__c</fullName>
        <label>Modified Service Code Modifier 3 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedServiceCodeModifier4Desc__c</fullName>
        <label>Modified Service Code Modifier 4 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedServiceCodeModifier4__c</fullName>
        <label>Modified Service Code Modifier 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifiedServiceCodeModifier__c</fullName>
        <label>Modified Service Code Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifierCodeSetId__c</fullName>
        <label>Modifier Code Set</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModifierCodeSetObject__c</fullName>
        <label>Modifier Code Set Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Priority__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcedureCodeId__c</fullName>
        <label>Procedure Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcedureCodeSetId__c</fullName>
        <label>Procedure Code Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcedureCodeSetObject__c</fullName>
        <label>Procedure Code Set Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonCodeId__c</fullName>
        <label>Reason Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonCodeObject__c</fullName>
        <label>Reason Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestStatusReason__c</fullName>
        <label>Request Status Reason Type Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestStatus__c</fullName>
        <label>Request Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedLengthOfStayDayQuantity__c</fullName>
        <label>Requested Length Of Stay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedLevelOfCare__c</fullName>
        <label>Requested Level Of Care</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedServiceEndDate__c</fullName>
        <label>Requested Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedServiceStartDate__c</fullName>
        <label>Requested Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceCategoryCodeText__c</fullName>
        <label>Service Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceCategoryText__c</fullName>
        <label>Service Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceCodeTypeIdentifier__c</fullName>
        <label>Service Code Type Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceCodeType__c</fullName>
        <label>Service Code Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceEffectiveDate__c</fullName>
        <label>Service Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceEndDate__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityId__c</fullName>
        <label>Servicing Facility</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityObject__c</fullName>
        <label>Servicing Facility Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingProviderId__c</fullName>
        <label>Servicing Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifierText__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDate__c</fullName>
        <label>Source System Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemText__c</fullName>
        <label>SourceSystem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TransportLocationId__c</fullName>
        <label>Transport Location Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726049654_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestItem_ModifiedProcedureCod_rel</label>
        <referenceTo>ssot__HealthcareProcedure__dlm</referenceTo>
        <relationshipLabel>CareRequestItem_ModifiedProcedureCod_rel</relationshipLabel>
        <relationshipName>rel_1716726049654_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726051750_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestItem_ProcedureCodeId_map__rel</label>
        <referenceTo>ssot__HealthcareProcedure__dlm</referenceTo>
        <relationshipLabel>CareRequestItem_ProcedureCodeId_map__rel</relationshipLabel>
        <relationshipName>rel_1716726051750_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726054178_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequestItem_CareRequestCaseId_ma_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CareRequestItem_CareRequestCaseId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716726054178_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>